# Distributed-GPT-Node

./: .gitignore  Cargo.toml  README.md  blocks_map.json
src/: candle_loaders.rs  device_select.rs  gguf_loader.rs  gguf_loader_hint.rs  golden.json  layer.rs  local_llama.rs  main.rs  math.rs  model.rs  model_hf_llama.rs  model_inspect.rs  models_candle.rs  models_p2p.rs  p2p_blocks_map.rs  p2p_client_libp2p.rs  p2p_codec.rs  p2p_identity.rs  p2p_llama_forward.rs  p2p_node.rs  p2p_runtime_handle.rs  p2p_server_blocks.rs  p2p_tensor_conv.rs  p2p_wire.rs  rope.rs  shard_index.rs  tests.rs  tokenizer.rs  utils.rs  web_api.rs  web_server.rs  web_state.rs
src/old/: layer.rs  math.rs  train.rs  utils.rs
src/static/: chat.html
