[package]
name = "llm"
version = "0.1.0"
# 2024 = latest edition
edition = "2024"

#  $env:MODEL_DEBUG="1"; cargo run --release

[dependencies]

serde     = { version = "1.0", features = ["derive"] }
# bincode 2.0 mit beiden Feature-Flags:
bincode   = { version = "2.0.1", features = ["derive", "serde"] }
# falls benötigt
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }

half = { version = "2", features = ["serde"] }
ctrlc = "3"
crossterm = "0.27"
rayon   = "1.8"
anyhow    = "1.0"
once_cell = "1"


rand = "0.9.2"
rand_distr = "0.5.0"
serde_json = "1.0"

csv = "1.3"

tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
regex = "1.10"
ahash = "0.8"

[dev-dependencies]
# Add any test-specific dependencies here if needed

[[bin]]
name = "llm"
path = "src/main.rs"
