[package]
name        = "llm_node"
version     = "0.1.0"
edition     = "2021"
authors     = ["Marcus Schlieper <mschlieper@ylook.de>"]


[dependencies]
# candle = { git = "https://github.com/huggingface/candle", package = "candle-core", default-features = false }
candle = { git = "https://github.com/huggingface/candle", package = "candle-core", default-features = false, features = ["cuda"] }
candle_nn = { git = "https://github.com/huggingface/candle", package = "candle-nn", default-features = false }
candle_transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers", default-features = false }

# Tokenizers: Regex-Backend einschalten
tokenizers = { version = "0.22", default-features = false,features = ["fancy-regex"] }

# Sonstige
ahash              = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

#llm = { version = "1.3.6", default-features = false}
rand = "0.9.2"
  
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.147"
safetensors = "0.7.0"

crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bincode = "1.3"
async-trait = "0.1"
libp2p = { version = "0.56", default-features = false, features = [
    "tcp", "noise", "yamux",
    "mdns", "gossipsub", "identify", "kad", "ping",
    "tokio", "macros", "quic",
    "request-response"
] }

base64 = "0.22"

axum = { version = "0.7.9", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
candle-core = { git = "https://github.com/huggingface/candle", version = "0.9.2-alpha.2" }


# 👉 Falls du später GPU nutzen willst:
#   candle-core = { git = "...", package = "candle-core", features = ["cuda"] }
#   candle-nn   = { git = "...", features = ["cuda"] }
